# RecruitRankAI

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.streamlit  Makefile  Procfile  README.md  SUBMISSION_CHECKLIST.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
frontend/: README.md  app.js  index.html  styles.css
recruit_ai/: chroma.py  embeddings.py  memory.py
recruit_ai/api/: server.py
recruit_ai/candidate/: certification_parser.py  education_parser.py  experience_parser.py  graph_schema.py  knowledge_graph.py  parser.py  project_parser.py  repository.py  research_parser.py  schema.py  section_parser.py  skill_parser.py  test_education.py  test_graph.py  test_parser.py  test_projects.py  test_repository.py  test_sections.py  test_skills.py
recruit_ai/embeddings/: embedder.py
recruit_ai/ingestion/: ingest_folder.py  ingest_resume.py  pdf_loader.py  preprocess.py  test_ingest.py  test_loader.py  test_preprocess.py
recruit_ai/job/: job_graph.py  parser.py  schema.py  section_parser.py  skill_parser.py  test_job.py  test_job_graph.py
recruit_ai/ranking/: batch_ranker.py  export_csv.py  feature_builder.py  graph_matcher.py  hybrid_matcher.py  job_features.py  matcher.py  rank_candidates.py  redrob_ranker.py  scorer.py  (+10 more)
scripts/: verify_release.ps1  verify_release.sh
tests/: test_api_contract.py  test_core_ranking.py  test_explanations.py  test_job_parser.py  test_job_uploads.py  test_recruiter_brain.py  test_submission.py
ui/: cards.py  charts.py  dashboard.py  sidebar.py  styles.py  utils.py
(+17 files in other folders)
