[project]
name = "recruitrankai"
version = "0.1.0"
description = "AI-powered candidate ranking system using RAG, embeddings, and LLMs."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "chromadb",
    "ollama",
    "rich",
    "pymupdf",
    "pandas",
    "numpy",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
